[workspace]
resolver = "2"
members = ["radixox-common", "radixox", "radixox-server", "oxidart"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Joshua"]
license = "MIT"
repository = "https://github.com/JoshuaBOUCHAT/radixox"

[workspace.dependencies]
radixox-common = { path = "radixox-common", version = "0.1.0" }
monoio = { version = "0.2.4", features = ["iouring"] }
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
slotmap = "1.1.1"
oxidart = { path = "oxidart", version = "0.4.0", features = ["monoio", "regex"] }
smallvec = "1.15.1"

[profile.lto]
inherits = "release"
lto = true
debug = false
[profile.release]
lto = "fat"          # LTO maximal (analyse tout le graphe de dépendances)
codegen-units = 1    # Force une seule unité de compilation pour plus d'optimisations
panic = "abort"      # Réduit la taille du binaire et accélère les perfs (pas de stack unwinding)
strip = true         # Retire les symboles de debug pour un binaire plus léger
opt-level = 3        # Optimisation maximale