[workspace]
resolver = "2"
members = ["radixox", "oxidart", "radixox-lib"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Joshua"]
license = "MIT"
repository = "https://github.com/JoshuaBOUCHAT/radixox"

[workspace.dependencies]
monoio = { version = "0.2.4", features = ["iouring"] }
bytes = { version = "1", features = ["serde"] }
oxidart = { path = "oxidart", version = "0.4.0" }
radixox-lib = { path = "radixox-lib", version = "0.1.0" }
smallvec = "1.15.1"
redis-protocol = { version = "6.0.0", default-features = false, features = [
    "std",
    "resp2",
    "resp3",
    "bytes",

] }

[profile.lto]
inherits = "release"
lto = true
debug = false
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
