[package]
name = "oxidart"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Adaptive Radix Tree with TTL, DFA pattern matching, and atomic counters"

[dependencies]
bytes.workspace = true
arrayvec = "0.7.6"
smallvec.workspace = true
ordered-float = "5.1.0"

monoio = { optional = true, workspace = true }


tokio = { version = "1", features = [
    "time",
    "sync",
    "rt",
    "macros",
], optional = true }
hislab = { version="0.2.0",optional=true }
rand = { version = "0.8", optional = true }
regex-automata = { version = "0.4", optional = true, default-features = false, features = [
    "dfa-build",
    "dfa-search",
    "syntax",
] }
thin-vec = "0.2.14"

[features]
default = ["ttl"]
ttl = ["hislab", "hislab/rand", "dep:rand"]
monoio = ["dep:monoio", "ttl"]
tokio = ["dep:tokio", "ttl"]
regex = ["dep:regex-automata", "ttl"]
