[package]
name = "oxidart"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Adaptive Radix Tree with TTL, DFA pattern matching, and atomic counters"
readme = "README.md"
keywords = ["art", "radix-tree", "trie", "data-structure", "ttl"]
categories = ["data-structures"]

[dependencies]
bytes.workspace = true
arrayvec = "0.7.6"
smallvec.workspace = true
ordered-float = "5.1.0"
monoio.workspace = true
hislab = { version = "0.2.1", features = ["rand"] }
radixox-lib = { workspace = true }


rand = "0.8"
regex-automata = { version = "0.4", optional = true, default-features = false, features = [
    "dfa-build",
    "dfa-search",
    "syntax",
] }
thin-vec = "0.2.14"

[features]
regex = ["dep:regex-automata"]
