[package]
name = "radixox-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RadixOx server - Redis-like data store"
default-run = "radixox-resp"

[[bin]]
name = "radixox-legacy"
path = "src/bin/legacy.rs"
required-features = ["legacy"]

[[bin]]
name = "radixox-resp"
path = "src/bin/resp.rs"
required-features = ["resp"]

[features]
default = ["legacy", "resp"]
legacy = ["dep:prost", "dep:radixox-common"]
resp = ["dep:redis-protocol"]

[dependencies]
monoio.workspace = true
bytes.workspace = true
oxidart.workspace = true
smallvec.workspace = true

# Legacy protocol (protobuf)
prost = { workspace = true, optional = true }
radixox-common = { path = "../radixox-common", optional = true }

# Redis protocol (RESP)
redis-protocol = { version = "6.0.0", default-features = false, features = [
    "std",
    "resp2",
    "resp3",
    "bytes",
], optional = true }
local-sync = "0.1.1"
io-uring = "0.6.4"
