[package]
name = "radixox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RadixOx client library"

[dependencies]
slotmap.workspace = true
radixox-common.workspace = true
serde.workspace = true
monoio.workspace = true
prost.workspace = true
bytes.workspace = true

# Feature spécifique
tokio = { version = "1.49.0", features = ["full"], optional = true }
async-trait = { version = "0.1.89", optional = true }
local-sync = "0.1.1"

[features]
default = ["tokio"]
# Cette feature activera les dépendances nécessaires pour le bridge
tokio = ["dep:tokio", "dep:async-trait"]
