[package]
name = "radixox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RadixOx client library"

[dependencies]
slotmap.workspace = true
radixox-common.workspace = true
serde.workspace = true
serde_json = "1.0"
monoio.workspace = true
prost.workspace = true
bytes.workspace = true
local-sync = "0.1.1"

# Optional tokio support (for future bridge)
tokio = { version = "1.49.0", features = ["full"], optional = true }
async-trait = { version = "0.1.89", optional = true }

[features]
default = []
tokio = ["dep:tokio", "dep:async-trait"]
