[package]
name = "radixox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RadixOx — Redis-compatible in-memory key-value store"
readme = "../README.md"
keywords = ["redis", "key-value", "database", "io-uring", "server"]
categories = ["database-implementations", "network-programming"]

[[bin]]
name = "radixox"
path = "src/bin/resp.rs"

[dependencies]
monoio.workspace = true
bytes.workspace = true
oxidart = { workspace = true, features = ["regex"] }
radixox-lib = { workspace = true }
smallvec.workspace = true
redis-protocol = { workspace = true }

local-sync = "0.1.1"
io-uring = "0.6.4"

[dev-dependencies]
redis = "0.27"
